# Sapient_System

./: LICENSE  README.md
sapient/: CMakeLists.txt  alert.pb.cc  alert.pb.h  alert.proto  alert_ack.pb.cc  alert_ack.pb.h  alert_ack.proto  associated_detection.pb.cc  associated_detection.pb.h  associated_detection.proto  associated_file.pb.cc  associated_file.pb.h  associated_file.proto  detection_report.pb.cc  detection_report.pb.h  detection_report.proto  error.pb.cc  error.pb.h  error.proto  follow.pb.cc  follow.pb.h  follow.proto  location.pb.cc  location.pb.h  location.proto  proto_options.pb.cc  proto_options.pb.h  range_bearing.pb.cc  range_bearing.pb.h  range_bearing.proto  registration.pb.cc  registration.pb.h  registration.proto  registration_ack.pb.cc  registration_ack.pb.h  registration_ack.proto  sapient_message.pb.cc  sapient_message.pb.h  sapient_message.proto  sapient_service.cpp  (+19 more)
sapientpb/: CMakeLists.txt  sapient_config_adapter.c  sapient_config_adapter.h  sapient_init.c  sapient_init.h  sapient_nodeid.cpp  sapient_nodeid.h  sapient_product.h  sapient_tcp.cpp  sapient_tcp.h  sky_alert_reportpb.cpp  sky_alert_reportpb.h  sky_detection_reportpb.cpp  sky_detection_reportpb.h  sky_registrationpb.cpp  sky_registrationpb.h  sky_status_reportpb.cpp  sky_status_reportpb.h  sky_task_handler.cpp  sky_task_handler.h
sapientpb/adapter/: auto_hunt_param_adapter.c  auto_hunt_param_adapter.h  log_adapter.h  radar_state_adapter.cpp  radar_state_adapter.h  sn_adapter.c  sn_adapter.h
